# Dial-UP

./: CMakeLists.txt  Config.cmake.in  LICENSE  README.md  StiltFox-RestApi-Framework.cpp  StiltFox-Web-Framework.cpp  StiltFox-Web-Framework.hpp  StiltFox-Web-FrameworkTest.cpp  stilt_Fox_ascii_art.txt
modules/: CMakeLists.txt
modules/configurationloader/: CMakeLists.txt  ConfigurationLoader.cpp  ConfigurationLoader.hpp
modules/controllermanager/: CMakeLists.txt  ControllerManager.cpp  ControllerManager.hpp
modules/http-message/: CMakeLists.txt  HttpMessage.c++  HttpMessage.h++
modules/operator/: CMakeLists.txt  Operator.c++
modules/socket/: CMakeLists.txt  Socket.c++  Socket.h++  Socket.hpp
old-2/modules/: CMakeLists.txt
old-2/modules/operator/: Operator.h++
old-2/modules/socket/: Socket.c++
old-2/old/: StiltFox-Web-Framework.cpp
old-2/old/modules/: CMakeLists.txt
old-2/old/modules/socket/: CMakeLists.txt  Socket.cpp
old-2/test/: CMakeLists.txt  SocketTest.c++
old/modules/configurationloader/: ConfigurationLoader.hpp
src/main/: CMakeLists.txt
src/main/endpoint-registry/: CMakeLists.txt  EndpointRegistry.c++  EndpointRegistry.h++
src/main/http-message/: CMakeLists.txt  HttpMessage.c++  HttpMessage.h++
src/main/port-authority/: CMakeLists.txt  PortAuthority.c++  PortAuthority.h++  StiltFoxAsciiArt.h++
src/main/server-socket/: CMakeLists.txt  ServerSocket.c++  ServerSocket.h++
src/main/server-socket/client-connection/: CMakeLists.txt  ClientConnection.c++  ClientConnection.h++  Response.h++
src/main/socket/: CMakeLists.txt  Socket.c++  Socket.h++
src/main/thread-pool/: CMakeLists.txt  ThreadPool.c++  ThreadPool.h++
src/main/url/: CMakeLists.txt  Url.c++  Url.h++
src/test/: CMakeLists.txt
src/test/endpoint-registry/: CMakeLists.txt  RegisterEndpointTests.c++  SubmitTests.c++  UnregisterEndpointTests.c++
src/test/http-message/: CMakeLists.txt  Parsing.c++  printAsRequest.c++  printAsResponse.c++
src/test/port-authority/: CMakeLists.txt  EndpointIntegrationTest.c++  KillListenerTests.c++  StartApplicationTests.c++
src/test/port-authority/testing-utilities/: CMakeLists.txt  PortAuthorityTestingUtils.c++  PortAuthorityTestingUtils.h++
src/test/print_helper/: CMakeLists.txt  PrintHelper.c++  PrintHelper.h++
src/test/server-socket/: CMakeLists.txt  ServerSocketTest.c++
src/test/url/: CMakeLists.txt  ToUrlTests.c++  ToUrlWithoutParameters.c++  parseTests.c++
test/: CMakeLists.txt  HttpMessageTest.c++
